@@ -23,34 +23,34 @@
  +-------------------------------------------------------------------------+
 */
 
-/* work with both Cacti 1.x and Cacti 0.8.x */
+# ------------------------------------------------------------
+# If not running from Cacti, make sure you set the RRDtool
+# path on this line.
+# ------------------------------------------------------------
+$rrdtool    = '/usr/bin/rrdtool';
+
 if (file_exists(__DIR__ . '/../include/cli_check.php')) {
+	print 'NOTE: Running from the Cacti Server' . PHP_EOL;
 	require(__DIR__ . '/../include/cli_check.php');
-} elseif (file_exists(__DIR__ . '/../include/global.php')) {
-	/* do NOT run this script through a web browser */
-	if (!isset($_SERVER['argv'][0]) || isset($_SERVER['REQUEST_METHOD']) || isset($_SERVER['REMOTE_ADDR'])) {
-		die('<br>This script is only meant to run at the command line.');
-	}
-
-	$no_http_headers = true;
-
-	require(__DIR__ . '/../include/global.php');
+	$from_cacti = true;
 } else {
-	print 'FATAL: Can not initialize the Cacti API' . PHP_EOL;
-
-	exit(1);
+	print 'NOTE: Not running from the Cacti Server' . PHP_EOL;
+	$from_cacti = false;
 }
 
-if ($config['poller_id'] > 1) {
+if ($from_cacti && $config['poller_id'] > 1) {
 	print 'FATAL: This utility is designed for the main Data Collector only' . PHP_EOL;
 
 	exit(1);
 }
 
-// For legacy Cacti behavior
 if (!function_exists('cacti_sizeof')) {
-	function cacti_sizeof($object) {
-		return ($object === false || !is_array($object)) ? 0 : sizeof($object);
+	function cacti_sizeof($array) {
+		return ($array === false || !is_array($array)) ? 0 : sizeof($array);
+	}
+
+	function cacti_count($array) {
+		return ($array === false || !is_array($array)) ? 0 : count($array);
 	}
 }
 
@@ -248,7 +248,9 @@ if (class_exists('SQLite3')) {
 }
 
 /* verify the location of rrdtool */
-$rrdtool = read_config_option('path_rrdtool');
+if (function_exists('read_config_option')) {
+	$rrdtool = read_config_option('path_rrdtool');
+}
 
 if (!file_exists($rrdtool)) {
 	if (substr_count(PHP_OS, 'WIN')) {
